# pydice

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pydice/: __init__.py  main.py  test_main.py
