[project]
name = "pydice"
version = "0.4.0"
description = "CLI dice roll application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.16.0",
]
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
pydice = "pydice.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
