[project]
name = "pydice"
version = "0.5.0"
description = "CLI dice roll application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.16.0",
]
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
pydice = "pydice.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.138.14",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.0",
]
